syntax = "proto3";

package fileupload;

option go_package = ".";

service FileUploadService {
  // Unary RPC
  rpc SingleUpload(SingleUploadRequest) returns (SingleUploadResponse);
  // Bidirectional Stream RPC
  rpc MultipleUpload(stream MultipleUploadRequest) returns (stream MultipleUploadResponse);
}

message AWSConfig {
  string profile = 1;
  string region = 2;
}

message S3Config {
  string bucket = 1;
  string key = 2;
  string content_type = 3;
}

message SingleUploadRequest {
  AWSConfig aws_config = 1;
  S3Config s3_config = 2;
  bytes data = 3;
}

message SingleUploadResponse {
  string message = 1;
}

message MultipleUploadRequest {
  AWSConfig aws_config = 1;
  S3Config s3_config = 2;
  bytes chunk_data = 3;
  int32 chunk_number = 4;
}

message MultipleUploadResponse {
  int32 chunk_number = 1;
  string message = 2;
  float progress = 3;
}